Change submit button types on domain availability

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -77,7 +77,7 @@
       {% endwith %}
     {% endwith %}
 
-    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+    <button type="button" name="submit_button" value="save" class="usa-button usa-button--unstyled">
       <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
         <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
       </svg><span class="margin-left-05">Add another alternative</span>
@@ -87,7 +87,7 @@
 
     <button
     id="check-availability-button"
-    type="button"
+    type="submit"
     class="usa-button usa-button--outline"
     validate-for="{{ forms.0.requested_domain.auto_id }}"
     >Check availability</button>
