Minor styling change

--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -83,7 +83,7 @@
         {% else %}
           <a
           class="usa-button--unstyled disabled-link usa-tooltip text-no-underline "
-          data-position="top"
+          data-position="bottom"
           title="Domains must have at least one domain manager"
           aria-disabled="true"
           data-tooltip="true"
