--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -29,10 +29,10 @@
           {% if step == Step.ORGANIZATION_TYPE %}
             {% if application.organization_type is not None %}
               {% with long_org_type=application.organization_type|get_organization_long_name %}
-                {{ long_org_type }}
+                <p>{{ long_org_type }}</p>
               {% endwith %}
             {% else %}
-              Incomplete
+              <p>Incomplete</p>
             {% endif %}
           {% endif %}
           {% if step == Step.TRIBAL_GOVERNMENT %}
@@ -41,16 +41,16 @@
             {% if application.state_recognized_tribe %}<p>State-recognized tribe</p>{% endif %}
           {% endif %}
           {% if step == Step.ORGANIZATION_FEDERAL %}
-            {{ application.get_federal_type_display|default:"Incomplete" }}
+            <p>{{ application.get_federal_type_display|default:"Incomplete" }}</p>
           {% endif %}
           {% if step == Step.ORGANIZATION_ELECTION %}
-            {{ application.is_election_board|yesno:"Yes,No,Incomplete" }}
+            <p>{{ application.is_election_board|yesno:"Yes,No,Incomplete" }}</p>
           {% endif %}
           {% if step == Step.ORGANIZATION_CONTACT %}
             {% if application.organization_name %}
               {% include "includes/organization_address.html" with organization=application %}
             {% else %}
-              Incomplete
+              <p>Incomplete</p>
             {% endif %}
           {% endif %}
           {% if step == Step.ABOUT_YOUR_ORGANIZATION %}
@@ -62,7 +62,7 @@
                 {% include "includes/contact.html" with contact=application.authorizing_official %}
               </div>
             {% else %}
-              Incomplete
+              <p>Incomplete</p>
             {% endif %}
           {% endif %}
           {% if step == Step.CURRENT_SITES %}
@@ -90,7 +90,7 @@
             {% endif %}
           {% endif %}
           {% if step == Step.PURPOSE %}
-            {{ application.purpose|default:"Incomplete" }}
+            <p>{{ application.purpose|default:"Incomplete" }}</p>
           {% endif %}
           {% if step == Step.YOUR_CONTACT %}
               {% if application.submitter %}
@@ -98,7 +98,7 @@
                   {% include "includes/contact.html" with contact=application.submitter %}
                 </div>
               {% else %}
-                Incomplete
+                <p>Incomplete</p>
               {% endif %}
           {% endif %}
           {% if step == Step.OTHER_CONTACTS %}
@@ -110,15 +110,15 @@
             {% empty %}
               <div class="margin-bottom-105">
                 <p class="text-semibold margin-top-1 margin-bottom-0">No other employees from your organization?</p>
-                {{ application.no_other_contacts_rationale|default:"Incomplete" }}
+                <p>{{ application.no_other_contacts_rationale|default:"Incomplete" }}</p>
               </div>
             {% endfor %}
           {% endif %}
           {% if step == Step.ANYTHING_ELSE %}
-            {{ application.anything_else|default:"No" }}
+            <p>{{ application.anything_else|default:"No" }}</p>
           {% endif %}
           {% if step == Step.REQUIREMENTS %}
-            {{ application.is_policy_acknowledged|yesno:"I agree.,I do not agree.,I do not agree." }}
+            <p>{{ application.is_policy_acknowledged|yesno:"I agree.,I do not agree.,I do not agree." }}</p>
           {% endif %}
         </div>
       </div>
