--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -31,7 +31,7 @@ a.usa-button.disabled-link {
   color: #454545 !important
 }
 
-a.usa-button.disabled-link:hover{
+a.usa-button.disabled-link:hover {
   background-color: #ccc !important;
   cursor: not-allowed !important;
   color: #454545 !important
@@ -47,8 +47,8 @@ a.usa-button.disabled-link:focus {
 a.usa-button--unstyled.disabled-link,
 a.usa-button--unstyled.disabled-link:hover,
 a.usa-button--unstyled.disabled-link:focus {
-  cursor: not-allowed !important;
-  outline: none !important;
+  cursor: not-allowed;
+  outline: none;
 }
 
 a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
