--- a/src/registrar/assets/sass/_theme/_register-form.scss
+++ b/src/registrar/assets/sass/_theme/_register-form.scss
@@ -12,7 +12,7 @@
   margin-top: units(1);
 }
 
-.register-form-step h3 {
+.register-form-step h3:not(.text-base-darker) {
   color: color('primary-dark');
   letter-spacing: $letter-space--xs;
   margin-top: units(3);
