Restyle availability button

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -82,13 +82,14 @@
       </svg><span class="margin-left-05">Add another alternative</span>
     </button>
 
-    <br>
-
-    <button
+    <div class="margin-bottom-3">
+      <button
       id="check-availability-for-alternative-domains"
       type="button"
       class="usa-button usa-button--outline"
-    >Check availability</button>
+      >Check availability</button>
+    </div>
+    
 
   <p>If you’re not sure this is the domain you want, that’s ok. You can change the domain later. </p>
 
